#ES-197 - refactoring. Impl TestFeature#EVALUATION_RESULTS processing for experiment